tests/suite/errors/e48_unknown_string_escape.rs
// err: unknown escape

fn main() {
    let _s = "\y";
}
